Sun Apr 12 13:52:18 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/coverage/coverage.c: Remove extension from require argument.
	  [ci skip][fix GH-870] Patch by @yui-knk

Sun Apr 12 10:29:14 2015  Eric Wong  <e@80x24.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_connect_nonblock):
	  support `exception: false'
	* (get_no_exception): move function location
	* ext/socket/socket.c (sock_connect_nonblock):
	  support `exception: false'
	* test/openssl/test_pair.rb (test_connect_accept_nonblock_no_exception):
	  test `exception: false' on connect,
	  rename from `test_accept_nonblock_no_exception'
	* test/socket/test_nonblock.rb (test_connect_nonblock_no_exception):
	  new test

Sun Apr 12 09:57:16 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file_exhaustive.rb: Test a block device on GNU/Linux.

Sun Apr 12 09:24:03 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file_exhaustive.rb: Test a file not owned.

Sun Apr 12 09:05:44 2015  Tanaka Akira  <akr@fsij.org>

	* ext/fiddle/depend: Fix "Wrong mix of special targets" error with
	  OpenBSD make.

Sun Apr 12 09:04:37 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_file_exhaustive.rb: Windows doesn't support Unix file
	  modes.

Sun Apr 12 08:56:44 2015  Tanaka Akira  <akr@fsij.org>

	* ext/-test-/file/fs.c: OpenBSD needs sys/param.h before sys/mount.h.

Sun Apr 12 08:52:01 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file_exhaustive.rb: Test suid, sgid and sticky file.

Sat Apr 11 23:48:30 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* template/fake.rb.in: Don't assign baseruby, Because it's affect to
	  Makefile of native gem like json on bundled gems.

Sat Apr 11 23:33:22 2015  Tanaka Akira  <akr@fsij.org>

	* file.c (rb_f_test): Consider nsec for "=", "<" and ">" for "test"
	  method.

Sat Apr 11 23:26:05 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/rbinstall.rb: support destdir for native extention gem.
