@@ -1,3 +1,8 @@
+Sun Apr 12 13:54:05 2015  Tanaka Akira  <akr@fsij.org>
+
+	* test/ruby/test_io.rb: New test that open(fifo) doesn't block other
+	  threads.
+
 Sun Apr 12 13:52:18 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* ext/coverage/coverage.c: Remove extension from require argument.
